2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Solaris/SPARC.
	* Makefile.devel (multibuild-solaris-sparc-cc,
	multibuild-solaris-sparc-gcc): Enable all build variants that work or
	should work.
	* makemake.in (XCFLAGS): For Solaris/SPARC, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Make gettext calls work with non-GNU gettext in Solaris 11 libc.
	* makemake.in: After installing .mo files, on Solaris, create symbolic
	links ll_CC.UTF-8 -> ll for all supported locales.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix build failure with Sun cc.
	Sun cc and HP-UX cc do not look in the current directory by default
	when attempting to fulfil a '#include "..."' statement after a #line
	preprocessor directive. Cf. commit from 2017-03-16.
	* makemake.in: When compiling output of TXT2C, add option '-I.'.
	* modules/*/Makefile.in: When compiling a .m.c file, add option '-I.'.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix error during initialization of *TERMINAL-IO* on Mac OS X.
	* stream.d (handle_type): Ignore EBADF error on Mac OS X.
	(regular_or_pipe_handle_p): Renamed from pipe_file_handle_p.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix use of libtool's archive_cmds on Mac OS X.
	* makemake.in (DSYMUTIL): New variable.
	(archive_cmds): Don't lose references to $allow_undefined_flag.
	(XCC_CREATESHARED): Remove second command if present.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Avoid problem with shared libraries on Mac OS X.
	* makemake.in (SHREXT): Define to '.dylib' on Mac OS X and to '.sl' on
	HP-UX.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on NetBSD/sparc.
	* Makefile.devel (multibuild-netbsd-sparc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For NetBSD/sparc, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on DragonFly/i386.